feat: implement Navbar component and update App structure

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
   font-family: "Poppins", sans-serif;
   color-scheme: dark;
 }
-
+/* 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+} */
